[project]
name = "plot"
version = ""
description = ""
authors = [
    {name = "Yuuya Watabe", email = "watabe951@gmail.com"},
]
dependencies = [
    "matplotlib~=3.5",
    "pandas~=1.3",
    "pyreadline3~=3.3",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
